# sane-backends

./: .editorconfig  .gitignore  .gitlab-ci.yml  AUTHORS  NEWS  PROBLEMS  README  acinclude.m4  autogen.sh  configure.ac
ChangeLogs/: ChangeLog-1.0.0  ChangeLog-1.0.1  ChangeLog-1.0.27  ChangeLog-1.0.28  ChangeLog-1.0.29  ChangeLog-1.0.30  ChangeLog-1.0.31  ChangeLog-1.0.32  ChangeLog-1.1.1  ChangeLog-1.2.1
backend/: Makefile.am  abaton.c  agfafocus.c  apple.c  artec.c  artec_eplus48u.c  as6e.c  avision.c  avision.h  bh.c  bh.h  canon-sane.c  canon.c  canon630u-common.c  canon630u.c  canon_dr-cmd.h  canon_dr.c  canon_dr.h  canon_lide70-common.c  canon_lide70.c  canon_pp-io.c  canon_pp.c  cardscan.c  coolscan.c  coolscan2.c  coolscan3.c  dc210.c  dc240.c  dc25.c  dell1600n_net.c  dll.c  dmc.c  dmc.h  epjitsu.c  epson.c  epson2-io.c  epson2-ops.c  epson2.c  epson2_net.c  epson2_scsi.c  (+133 more)
doc/: Makefile.am  backend-writing.txt  releases.md  sane-abaton.man  sane-agfafocus.man  sane-apple.man  sane-artec.man  sane-artec_eplus48u.man  sane-avision.man  sane-bh.man  sane-canon.man  sane-canon630u.man  sane-canon_dr.man  sane-canon_lide70.man  sane-canon_pp.man  sane-coolscan2.man  sane-coolscan3.man  sane-dc210.man  sane-dc240.man  sane-dc25.man  sane-dll.man  sane-dmc.man  sane-epjitsu.man  sane-epson.man  sane-epson2.man  sane-epsonds.man  sane-escl.man  sane-find-scanner.man  sane-fujitsu.man  sane-genesys.man  sane-gphoto2.man  sane-gt68xx.man  sane-hp.man  sane-hp3900.man  sane-hp4200.man  sane-hp5400.man  sane-hpsj5s.man  sane-hs2p.man  sane-ibm.man  sane-kodak.man  (+42 more)
frontend/: .gitignore  Makefile.am  jpegtopdf.c  jpegtopdf.h  saned.c  saned.xinetd.conf.in  saned@.service.in  scanimage.c
include/: Makefile.am
newsfragments/: README.md  avision_new_models.backend  canon_dr_new_models.backend  canon_lide70_improvements.bugfix  epson2_fix_focus.backend  epson2_improve_reliability.backend  epson_new_scanners.backend  epson_xp-452_455.backend  escl_correct_location.backend  escl_fix_old_tls.backend  escl_jpeg_resolution.backend  escl_localhost_redirection.backend  escl_new_models.backend  (+35 more)
po/: bg.po  (+27 more)
(+145 files in other folders)
